@@ -18,9 +18,7 @@
  */
 package org.apache.pinot.spi.stream;
 
-import com.google.common.collect.ImmutableSet;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 import javax.annotation.Nullable;
@@ -28,38 +26,45 @@ import org.apache.pinot.spi.data.readers.GenericRow;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
+import static org.mockito.Mockito.mock;
+
 
 public class StreamDataDecoderImplTest {
   private static final String NAME_FIELD = "name";
   private static final String AGE_HEADER_KEY = "age";
-  private static final String SEQNO_RECORD_METADATA = "seqNo";
+  private static final String SEQ_NO_RECORD_METADATA = "seqNo";
+  private static final StreamMessageMetadata METADATA = mock(StreamMessageMetadata.class);
 
   @Test
   public void testDecodeValueOnly() {
     TestDecoder messageDecoder = new TestDecoder();
-    messageDecoder.init(Collections.emptyMap(), ImmutableSet.of(NAME_FIELD), "");
+    messageDecoder.init(Map.of(), Set.of(NAME_FIELD), "");
     String value = "Alice";
-    BytesStreamMessage message = new BytesStreamMessage(value.getBytes(StandardCharsets.UTF_8));
+    BytesStreamMessage message = new BytesStreamMessage(value.getBytes(StandardCharsets.UTF_8), METADATA);
     StreamDataDecoderResult result = new StreamDataDecoderImpl(messageDecoder).decode(message);
     Assert.assertNotNull(result);
     Assert.assertNull(result.getException());
     Assert.assertNotNull(result.getResult());
 
     GenericRow row = result.getResult();
-    Assert.assertEquals(row.getFieldToValueMap().size(), 1);
+    Assert.assertEquals(row.getFieldToValueMap().size(), 2);
     Assert.assertEquals(String.valueOf(row.getValue(NAME_FIELD)), value);
+    Assert.assertEquals(row.getValue(StreamDataDecoderImpl.RECORD_SERIALIZED_VALUE_SIZE_KEY), value.length());
   }
 
   @Test
   public void testDecodeKeyAndHeaders() {
     TestDecoder messageDecoder = new TestDecoder();
-    messageDecoder.init(Collections.emptyMap(), ImmutableSet.of(NAME_FIELD), "");
+    messageDecoder.init(Map.of(), Set.of(NAME_FIELD), "");
     String value = "Alice";
     String key = "id-1";
     GenericRow headers = new GenericRow();
     headers.putValue(AGE_HEADER_KEY, 3);
-    Map<String, String> recordMetadata = Collections.singletonMap(SEQNO_RECORD_METADATA, "1");
-    StreamMessageMetadata metadata = new StreamMessageMetadata(1234L, headers, recordMetadata);
+    StreamMessageMetadata metadata = new StreamMessageMetadata.Builder().setRecordIngestionTimeMs(1234L)
+        .setOffset(new LongMsgOffset(0), new LongMsgOffset(1))
+        .setHeaders(headers)
+        .setMetadata(Map.of(SEQ_NO_RECORD_METADATA, "1"))
+        .build();
     BytesStreamMessage message =
         new BytesStreamMessage(key.getBytes(StandardCharsets.UTF_8), value.getBytes(StandardCharsets.UTF_8), metadata);
 
@@ -73,16 +78,16 @@ public class StreamDataDecoderImplTest {
     Assert.assertEquals(row.getValue(NAME_FIELD), value);
     Assert.assertEquals(row.getValue(StreamDataDecoderImpl.KEY), key, "Failed to decode record key");
     Assert.assertEquals(row.getValue(StreamDataDecoderImpl.HEADER_KEY_PREFIX + AGE_HEADER_KEY), 3);
-    Assert.assertEquals(row.getValue(StreamDataDecoderImpl.METADATA_KEY_PREFIX + SEQNO_RECORD_METADATA), "1");
+    Assert.assertEquals(row.getValue(StreamDataDecoderImpl.METADATA_KEY_PREFIX + SEQ_NO_RECORD_METADATA), "1");
     Assert.assertEquals(row.getValue(StreamDataDecoderImpl.RECORD_SERIALIZED_VALUE_SIZE_KEY), value.length());
   }
 
   @Test
   public void testNoExceptionIsThrown() {
     ThrowingDecoder messageDecoder = new ThrowingDecoder();
-    messageDecoder.init(Collections.emptyMap(), ImmutableSet.of(NAME_FIELD), "");
+    messageDecoder.init(Map.of(), Set.of(NAME_FIELD), "");
     String value = "Alice";
-    BytesStreamMessage message = new BytesStreamMessage(value.getBytes(StandardCharsets.UTF_8));
+    BytesStreamMessage message = new BytesStreamMessage(value.getBytes(StandardCharsets.UTF_8), METADATA);
     StreamDataDecoderResult result = new StreamDataDecoderImpl(messageDecoder).decode(message);
     Assert.assertNotNull(result);
     Assert.assertNotNull(result.getException());
